--- a/views/rps_game.erb
+++ b/views/rps_game.erb
@@ -1,1 +1,4 @@
 <h1>WELCOME TO ROCK PAPER SCISSORS</h1>
+<p><strong>Your play:</strong> <%= @play %></p>
+<p><strong>Computer's play:</strong> <%= @computer_play %></p>
+<h3><%= @result %></h3>
